@@ -1,3 +1,13 @@
+(set @strict 0) (tackon "dir" "file:") ; "","file:",""
+(set @strict 0) (tackon "dir/" "file:") ; "","file:",""
+(set @strict 0) (tackon "dir/" "Ram Disk:") ; "","Ram Disk:",""
+(set @strict 0) (tackon "dir" "Ram Disk:") ; "","Ram Disk:",""
+(set @strict 0) (tackon "///" "Ram Disk:") ; "","Ram Disk:",""
+(set @strict 0) (tackon "/" "Ram Disk:") ; "","Ram Disk:",""
+(set @strict 0) (tackon "/" "Ram Disk:dir/") ; "","Ram Disk:dir/",""
+(set @strict 0) (tackon "/" "RAM:dir/") ; "","RAM:dir/",""
+(set @strict 0) (tackon "/" "RAM:file") ; "","RAM:file",""
+(set @strict 0) (tackon "/" "Ram Disk:file") ; "","Ram Disk:file",""
 (set @strict 0) (tackon "work:tools/yam" "/") ; "","work:tools/yam//",""
 (set @strict 0) (tackon "work:tools/yam/" "/") ; "","work:tools/yam//",""
 (set @strict 0) (tackon "work:tools/yam/" "//") ; "","work:tools/yam///",""
@@ -37,7 +47,7 @@
 (set @strict 0) (tackon "dir" "file/") ; "","dir/file/",""
 (set @strict 0) (tackon "dir" "file//") ; "","dir/file//",""
 (set @strict 0) (tackon "dir/" "file/") ; "","dir/file/",""
-(set @strict 0) (tackon "dir/" "file:") ; "","dir/file:",""
+(set @strict 0) (tackon "dir/" "file:") ; "","file:",""
 (set @strict 0) (tackon "dir:" "file/") ; "","dir:file/",""
 (tackon "dir" "file/") ; "","Line 1: Not a file 'file/' 0",""
 (tackon "dir" "file:") ; "","Line 1: Not a file 'file:' 0",""
